Fix text size issue on mobile device

--- a/resources/css/smallscreen.css
+++ b/resources/css/smallscreen.css
@@ -31,7 +31,7 @@ p {
     height: auto; 
 }
 header{
-    background: linear-gradient(81deg, #0b1b2a, #1d4660);
+    background: linear-gradient(283deg, #00198f, #911f00);
     background-size: 200% 200%;
     max-width:100%;
     max-height: auto;
@@ -64,22 +64,23 @@ header{
       
   }
   .banner img {
-      max-width: 35%;
+      max-width: 60%;
       max-height: auto;
       border-radius: 50%;
       box-shadow:0px 6px 5px ;
   }
     .banner #me {
-      color: snow;
+    color: snow;
     max-width: 100%;
     height: auto;
     display: flex;
-      justify-content: center;
+    justify-content: center;
+    font-size: 2.5em;
   }
 
 nav {
     width: 100%;
-    background:linear-gradient(81deg, #0b1b2a, #1d4660) ;
+    background: linear-gradient(283deg, #00198f, #911f00);
     height: auto;
     display: flex;
     align-items: center;
@@ -138,7 +139,7 @@ nav {
   
   .collapsable-menu label {
         font-family: "Optima", sans-serif;
-      font-size: 0.8em;
+      font-size: 2em;
       padding-bottom: 0.25em;
   
       display: block;
